--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,215 @@
-aioredis==2.0.1
-alembic==1.16.4
-amqp==5.3.1
+aenum==3.1.16
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+alembic==1.16.1
+altair==5.5.0
 annotated-types==0.7.0
-anyio==4.10.0
+anyio==4.9.0
+APScheduler==3.11.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.3.11
+asttokens==3.0.0
+async-lru==2.0.5
 async-timeout==5.0.1
 asyncpg==0.30.0
-bcrypt==4.3.0
-billiard==4.2.1
-celery==5.5.3
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-fastapi==0.116.1
-flower==2.0.1
-greenlet==3.2.4
+attrs==25.3.0
+babel==2.17.0
+bandit==1.8.6
+beautifulsoup4==4.13.4
+black==25.1.0
+bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.0
+comm==0.2.2
+cryptography==45.0.2
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+dill==0.4.0
+dnspython==2.7.0
+easyocr==1.7.2
+ecdsa==0.19.1
+email_validator==2.2.0
+et_xmlfile==2.0.0
+exceptiongroup==1.3.0
+executing==2.2.0
+fastapi==0.115.12
+fastjsonschema==2.21.1
+filelock==3.18.0
+FlowIO==1.4.0
+fqdn==1.5.1
+frozenlist==1.7.0
+fsspec==2025.7.0
+future==1.0.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.25.1
+google-api-python-client==2.177.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+googleapis-common-protos==1.70.0
+greenlet==3.2.2
 h11==0.16.0
-httptools==0.6.4
-humanize==4.12.3
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
 idna==3.10
-kombu==5.5.4
+imageio==2.37.0
+ipykernel==6.29.5
+ipython==8.36.0
+isoduration==20.11.0
+isort==6.0.1
+jedi==0.19.2
+Jinja2==3.1.6
+json5==0.12.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.2
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+lazy_loader==0.4
+line-bot-sdk==3.17.1
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-packaging==25.0
-passlib==1.7.4
-prometheus_client==0.22.1
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==3.1.3
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==1.39.1
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+ninja==1.11.1.4
+notebook_shim==0.2.4
+numpy==2.2.5
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+oauthlib==3.3.1
+opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
+openpyxl==3.1.5
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pathspec==0.12.1
+pbr==6.1.1
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.8
+prometheus_client==0.21.1
 prompt_toolkit==3.0.51
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.31.0
+psutil==7.0.0
 psycopg2-binary==2.9.10
-pydantic==2.11.7
-pydantic-settings==2.10.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==20.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
+pycparser==2.22
+pydantic==2.11.5
 pydantic_core==2.33.2
-PyJWT==2.10.1
+pydeck==0.9.1
+Pygments==2.19.1
+pylint==3.3.7
+pyparsing==3.2.3
+pytesseract==0.3.13
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-json-logger==3.3.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
-redis==5.2.1
-shortuuid==1.0.13
+pyzmq==26.4.0
+referencing==0.36.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.1.0
+rpds-py==0.24.0
+rsa==4.9.1
+scikit-image==0.25.2
+scipy==1.15.3
+Send2Trash==1.8.3
+shapely==2.1.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
-SQLAlchemy==2.0.20
-starlette==0.47.2
-tornado==6.5.2
+soupsieve==2.7
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+starlette==0.46.2
+stevedore==5.4.1
+streamlit==1.45.1
+streamlit-javascript==0.1.5
+sympy==1.14.0
+tenacity==9.1.2
+terminado==0.18.1
+tifffile==2025.5.10
+tinycss2==1.4.0
+toml==0.10.2
+tomli==2.2.1
+tomlkit==0.13.3
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.4.2
+traitlets==5.14.3
+triton==3.3.1
+types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing_extensions==4.13.2
 tzdata==2025.2
-uvicorn==0.35.0
-uvloop==0.21.0
-vine==5.1.0
-watchfiles==1.1.0
+tzlocal==5.3.1
+uri-template==1.3.0
+uritemplate==4.2.0
+urllib3==2.4.0
+uvicorn==0.34.3
+watchdog==6.0.0
 wcwidth==0.2.13
-websockets==15.0.1
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+wrapt==1.17.2
+yarl==1.20.1
