--- a/app/.env
+++ b/app/.env
@@ -3,3 +3,10 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=take_home
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+SECRET_KEY=replace_this_with_a_secure_random_value
+ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
+
+REDIS_HOST=redis
+REDIS_PORT=6379
